# calton-fastapi-example

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.development.txt  requirements.txt  reviews.xlsx  setup.cfg
app/: main.py
app/datasources/: __init__.py  justeat_datasource.py  scraping_utils.py  xlsx_datasource.py
app/initializers/: logger.py  selenium.py  server.py  xlsx.py
app/interface/: abstract.py  enums.py  exceptions.py  schemas.py
app/routers/: reviews.py
app/settings/: logging_config.py  settings.py
