[tool.poetry]
name = "calton-fastapi-example"
version = "0.1.0"
description = "A simple API prototype."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pydantic = "^2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pydantic-settings = "^2"
colorlog = "^6.8.2"
selenium = "^4.23.0"
undetected-chromedriver = "^3.5.5"
cachetools = "^5.4.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
devtools = "^0.12.2"
pandas-stubs = "^2.2.2.240603"
types-cachetools = "^5.4.0.20240717"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
